# Buscador-Contactos-Comerciales

./: .env  .gitignore  README.md  app.py  buyer_contact.md  estrategia_comercial.md  pyproject.toml
src/sales_contact_finder/: crew.py  main.py
src/sales_contact_finder/config/: agents.yaml  tasks.yaml
